container_reg/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-registry
  namespace: default
  labels:
    app: container-registry
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app: container-registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: container-registry
    spec:
      containers:
        - image: registry:2.8.3
          imagePullPolicy: IfNotPresent
          name: registry
          ports:
            - containerPort: 5000
          volumeMounts:
          - name: registry-vol
            mountPath: /var/lib/registry
          - name: configuration
            mountPath: /etc/distribution
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/worker
        operator: Equal
        value: 'true'
      volumes:
      - name: registry-vol
        persistentVolumeClaim:
          claimName: container-registry
      - name: configuration
        configMap:
          name: container-registry
          defaultMode: 0755
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-container-registry
  namespace: default
  labels:
    app: ui-container-registry
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app: ui-container-registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ui-container-registry
    spec:
      containers:
        - image: joxit/docker-registry-ui:main
          imagePullPolicy: Always
          name: ui-container-registry
          ports:
            - containerPort: 80
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/worker
        operator: Equal
        value: 'true'
