container_reg/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: default
spec:
  ports:
    - port: 443
      targetPort: 5000
      name: registry
  selector:
    app: docker-registry
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: ui-docker-registry
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      name: ui-docker-registry
  selector:
    app: ui-docker-registry
  type: ClusterIP
