container_reg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-docker-registry
  namespace: default
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: dockerui.@@MYDOMAIN@@
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-docker-registry
                port:
                  number: 80
  tls:
    - secretName: tls-certificate
      hosts:
        - dockerui.@@MYDOMAIN@@
